fixed image distortion

--- a/client/src/pages/PhotosPage/PhotosPage.css
+++ b/client/src/pages/PhotosPage/PhotosPage.css
@@ -23,7 +23,6 @@
 .photos-page-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     height: 100vh;
     text-align: center;
     display: flex;
